[bugfix/ECCI-516-Spacing-between-News-Article-body-text-and-Related-News-block-too-small] tweaks to stylings

--- a/themes/custom/essex/css/news.css
+++ b/themes/custom/essex/css/news.css
@@ -296,8 +296,16 @@ div:has(.featured-teaser),
     .paragraph--type--news-1-4 .featured-news__card .card-content {
         height: 100%;
     }
+
+    .news-article__related-title {
+        margin-top: var(--spacing-mega);
+    }
 }
 
 a>i {
     margin-left: 0.2rem;
+}
+
+.field--name-field-media-image {
+    margin-bottom: var(--spacing-large)
 }
